@@ -1,3 +1,8 @@
+2011-09-15  Ryohei Sasano  <ryohei@nlp.kuee.kyoto-u.ac.jp>
+
+	* system/anaphora.c:
+	Bug fix for associative anaphora resolution.
+
 2011-09-02  Daisuke Kawahara  <dk@i.kyoto-u.ac.jp>
 
 	* system/case_ipal.c, system/cky.c, system/const.h, system/main.c:
